쿼리 DSL 에러 재시도...